@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.redisson</groupId>
         <artifactId>redisson-hibernate</artifactId>
-        <version>3.18.2-SNAPSHOT</version>
+        <version>3.19.1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -50,6 +50,21 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        <forkCount>2</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>
+                           --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+			   --add-opens=java.base/java.util=ALL-UNNAMED
+                           -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
+                        </argLine>
+                    </configuration>
+            </plugin>
+
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.2</version>
